<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.Details">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="230dp">

                <ImageView
                    android:id="@+id/food_image"
                    android:layout_width="match_parent"
                    android:layout_height="205dp"
                    android:src="@drawable/ic_launcher_background"
                    android:contentDescription="@string/todo" />


                <ImageButton
                    android:id="@+id/regular_food_plus_details"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:background="@android:color/transparent"
                    android:clickable="true"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/ic_plus_blue"
                    android:layout_alignParentRight="true"
                    android:contentDescription="@string/todo"
                    android:focusable="true" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:layout_marginStart="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/food_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/foodtitle"
                    android:textColor="@android:color/black" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:layout_marginStart="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/price"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/food_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/foodprice"
                    android:textColor="@android:color/black" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:layout_marginStart="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/calories"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/food_calories"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/foodcalories"
                    android:textColor="@android:color/black" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:layout_marginStart="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/food_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fooddescription"
                    android:textColor="@android:color/black"
                    android:layout_marginRight="10dp"
                    android:layout_marginEnd="10dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:layout_marginStart="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fat"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/food_fat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/foodfat"
                    android:textColor="@android:color/black" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:layout_marginStart="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sodium"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/food_sodium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/foodsodium"
                    android:textColor="@android:color/black" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal"
                android:layout_marginStart="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/protein"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/food_protein"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/foodprotein"
                    android:textColor="@android:color/black" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>



