<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ConfirmationActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <androidx.cardview.widget.CardView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="80dp"
        android:layout_marginRight="20dp"
        app:cardPreventCornerOverlap="false">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="196dp"
            android:background="#C981D38C">

            <TextView
                android:id="@+id/success"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/success"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/success"
                android:layout_marginStart="10dp"
                android:text="@string/order_placed_successfully"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/thank_you"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/order"
                android:layout_marginStart="10dp"
                android:text="@string/thank_you"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/thank_you2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/thank_you"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/submit_your_details"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/ok_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/thank_you"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="216dp"
                android:layout_marginBottom="11dp"
                android:text="@string/cancel"
                android:textSize="20sp" />

            <Button
                android:id="@+id/sub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/thank_you2"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="112dp"
                android:layout_marginBottom="11dp"
                android:text="@string/ok"
                android:textSize="20sp" />


        </RelativeLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView

        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="330dp"
        android:layout_marginRight="20dp"
        app:cardPreventCornerOverlap="false">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#C9FFFFFF">

            <TextView
                android:id="@+id/nm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"

                android:layout_marginTop="10dp"
                android:text="@string/name"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/ph"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/nm"
                android:layout_marginStart="10dp"

                android:layout_marginTop="20dp"
                android:text="@string/phone"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/em"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/ph"
                android:layout_marginStart="10dp"

                android:layout_marginTop="20dp"
                android:text="@string/email"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/post"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/em"
                android:layout_marginTop="77dp"
                android:text="@string/respons" />


        </RelativeLayout>


    </androidx.cardview.widget.CardView>

</RelativeLayout>