<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.OrderActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_centerInParent="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="331dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:text="@string/select_order_type"
                android:textColor="@android:color/black"
                android:textSize="17sp"
                android:layout_marginStart="20dp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/sms_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="@string/cash"
                    android:textColor="@android:color/black"
                    android:textSize="15sp"
                    android:layout_marginStart="20dp" />

                <Button
                    android:id="@+id/email_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="@string/visa"
                    android:textColor="@android:color/black"
                    android:textSize="15sp"
                    android:layout_marginStart="20dp" />

                <Button
                    android:id="@+id/phone_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="@string/ez"
                    android:textColor="@android:color/black"
                    android:textSize="15sp"
                    android:layout_marginStart="20dp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="95dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:text="@string/total_price"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:layout_marginStart="15dp" />

                <TextView
                    android:id="@+id/order_price_total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_0_0"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />

            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>



</RelativeLayout>